--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -46,14 +46,14 @@
 		<link href="./_app/immutable/assets/_layout-3191e629.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-00c0c3c9.js">
+		<link rel="modulepreload" href="./_app/immutable/start-dfe12e9b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-b22c61f2.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-8d898c92.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-97976f9e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-d8bb0535.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-gjthpt_START --><link rel="canonical" href="https://terastal.net/tera-type-calculator.html">
@@ -94,7 +94,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-591 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-565 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -155,14 +155,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1q5tdgz">
-			import { start } from "./_app/immutable/start-00c0c3c9.js";
+		<script type="module" data-sveltekit-hydrate="1wqtneg">
+			import { start } from "./_app/immutable/start-dfe12e9b.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1q5tdgz"]').parentNode,
-				version: "1674082395563",
+				target: document.querySelector('[data-sveltekit-hydrate="1wqtneg"]').parentNode,
+				version: "1674082677533",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
